--- a/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
+++ b/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
@@ -8,6 +8,7 @@
 	<title>Inicio</title>
 </head>
 <body style="background-color: rgb(68, 143, 91);">
-"Sos bueno bueno"
+Sos bueno bueno
+Mi familia es : {{ familia_1.nombre }} {{ familia_1.apellido }}
 </body>
 </html>
