--- a/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
+++ b/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
@@ -8,7 +8,9 @@
 	<title>Inicio</title>
 </head>
 <body style="background-color: rgb(68, 143, 91);">
-Sos bueno bueno
-Mi familia es : {{ familia_1.nombre }} {{ familia_1.apellido }}
+
+Mi familia es : 
+{{ familia_1.nombre }} {{ familia_1.apellido }} {{ familia_1.nacimiento}} {{ familia_1.edad }}
+{{ familia_2.nombre }}
 </body>
 </html>
