--- a/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
+++ b/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
@@ -9,8 +9,9 @@
 </head>
 <body style="background-color: rgb(68, 143, 91);">
 
-Mi familia es : 
-{{ familia_1.nombre }} {{ familia_1.apellido }} {{ familia_1.nacimiento}} {{ familia_1.edad }}
-{{ familia_2.nombre }}
+	<b> Mi familia: </b> <br>
+{{ familia_1.nombre }} {{ familia_1.apellido }} {{ familia_1.nacimiento}} {{ familia_1.edad }} <br>
+{{ familia_2.nombre }} {{ familia_2.apellido }} {{ familia_2.nacimiento }} {{ familia_2.edad }} <br>
+{{ familia_3.nombre }} {{ familia_3.apellido }} {{ familia_3.nacimiento }} {{ familia_3.edad }}
 </body>
 </html>
