--- a/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
+++ b/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
@@ -7,11 +7,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Inicio</title>
 </head>
-<body style="background-color: rgb(68, 143, 91);">
+<body style="background-color: rgb(246, 249, 247);">
 
 	<b> Mi familia: </b> <br>
-{{ familia_1.nombre }} {{ familia_1.apellido }} {{ familia_1.nacimiento}} {{ familia_1.edad }} <br>
-{{ familia_2.nombre }} {{ familia_2.apellido }} {{ familia_2.nacimiento }} {{ familia_2.edad }} <br>
-{{ familia_3.nombre }} {{ familia_3.apellido }} {{ familia_3.nacimiento }} {{ familia_3.edad }}
+ Nombre y apellido: {{ familia_1.nombre }} {{ familia_1.apellido }} <br>
+ Fecha de nacimiento: {{ familia_1.nacimiento}}<br>
+ Edad:  {{ familia_1.edad }} <br>
+ <br>
+ Nombre y apellido: {{ familia_2.nombre }} {{ familia_2.apellido }}<br>
+ Fecha de nacimiento: {{ familia_2.nacimiento }} <br>
+ Edad:{{ familia_2.edad }} <br>
+ <br>
+ Nombre y apellido: {{ familia_3.nombre }} {{ familia_3.apellido }}<br>
+ Fecha de nacimiento: {{ familia_3.nacimiento }}<br>
+ Edad: {{ familia_3.edad }}
 </body>
 </html>
