--- a/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
+++ b/ProyectoCoder/AppCoder/templates/AppCoder/inicio.html
@@ -9,7 +9,8 @@
 </head>
 <body style="background-color: rgb(246, 249, 247);">
 
-	<b> Mi familia: </b> <br>
+	<u><b> Mi familia: </b> </u> <br>
+	<br>
  Nombre y apellido: {{ familia_1.nombre }} {{ familia_1.apellido }} <br>
  Fecha de nacimiento: {{ familia_1.nacimiento}}<br>
  Edad:  {{ familia_1.edad }} <br>
